@@ -1,3 +1,9 @@
+2012-01-08 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/SDCCtree_dec.hpp,
+	  src/SDCCsalloc.hpp:
+	  Fix use of elimination ordering in calculation of partial map p.
+
 2012-01-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/gen.c:
